# how-to-make-script

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  SKILL.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  community-label-taxonomy.json  dependabot.yml  discussion-surface-map.json  pull_request_template.md
.omc/: notepad.md  project-memory.json
docs/: adaptive-quality-checking-zh.md  adaptive-quality-checking.md  agent-quick-reference-zh.md  agent-quick-reference.md  agent-skill-evaluation-zh.md  agent-skill-evaluation.md  agent-skill-review-2026-04-zh.md  agent-skill-review-2026-04.md  architecture-zh.md  architecture.md  bilingual-authoring.md  canonical-term-policy-zh.md  canonical-term-policy.md  community-feedback-loop-zh.md  community-feedback-loop.md  community-operations-zh.md  community-operations.md  community-triage-loop-zh.md  community-triage-loop.md  content-model-zh.md  content-model.md  context-loading-policy-zh.md  context-loading-policy.md  epistemic-stance-zh.md  epistemic-stance.md  exploration-vs-review-zh.md  exploration-vs-review.md  expression-lens-policy-zh.md  expression-lens-policy.md  how-to-create-a-screenplay-research-zh.md  how-to-create-a-screenplay-research.md  multi-agent-screenplay-architecture-zh.md  multi-agent-screenplay-architecture.md  multilingual-visual-language-layer-zh.md  multilingual-visual-language-layer.md  posture-weighted-loading.md  private-reference-distillation-policy-zh.md  progressive-disclosure-policy-zh.md  progressive-disclosure-policy.md  project-surface-architecture-zh.md  (+26 more)
references/: agent-team-roles.json  background-bundles.json  canonical-term-register.json  check-lens-matrix.json  constraint-key-register.json  context-loading-modes.md  expert-subagent-library.json  id-policy.md  (+13 more)
(+396 files in other folders)
